k8s/gestao-aluno.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestao-aluno-api
  namespace: plataforma-educacao
spec:
  type: ClusterIP
  selector:
    app: gestao-aluno-api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestao-aluno-api
  namespace: plataforma-educacao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestao-aluno-api
  template:
    metadata:
      labels:
        app: gestao-aluno-api
    spec:
      containers:
        - name: gestao-aluno-api
          image: rinaldoserra/plataforma-educacao-gestao-aluno-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health/ready
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
