k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plataforma-ingress
  namespace: plataforma-educacao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: plataforma.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff-api
                port:
                  number: 8080
